syntax = "proto2";

package protobuf;

option java_package = "ru.sberbank.lab2.protobuf";
option java_outer_classname = "AddressBookProtos";

message Person {
  required string first_name = 1;
  required string last_name = 2;

  message Address{
    required int32 country_code = 1;
    required string city = 2;
    required string street = 3;
  }

  repeated Address addresses = 3;
}


message PeopleBook {
  repeated Person people = 1;
}